...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" placeholder="GitHubのリポジトリを検索できるよー" translatesAutoresizingMaskIntoConstraints="NO" id="7ZZ-AM-ep2">
                                <rect key="frame" x="0.0" y="88" width="414" height="56"/>
                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="historySearchbar"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <outlet property="delegate" destination="Vad-H1-wfk" id="40z-sE-m2i"/>
                                </connections>
                            </searchBar>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="udx-yE-bnP">
...
                                        <connections>
                                            <outlet property="wordLabel" destination="tej-x7-AVd" id="Oth-8k-z9w"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="historyTableView"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <outlet property="dataSource" destination="Vad-H1-wfk" id="wcu-1y-7TT"/>
                                    <outlet property="delegate" destination="Vad-H1-wfk" id="MtQ-WR-Auu"/>
                                </connections>
                            </tableView>
...
                            <constraint firstItem="7ZZ-AM-ep2" firstAttribute="trailing" secondItem="2S1-Kl-JZw" secondAttribute="trailing" id="uIp-cD-A5g"/>
                            <constraint firstItem="udx-yE-bnP" firstAttribute="trailing" secondItem="2S1-Kl-JZw" secondAttribute="trailing" id="uuR-qm-tXT"/>
                            <constraint firstItem="Y92-l0-xR8" firstAttribute="leading" secondItem="2S1-Kl-JZw" secondAttribute="leading" id="vlQ-Hn-Tqe"/>
                            <constraint firstItem="Y92-l0-xR8" firstAttribute="top" secondItem="udx-yE-bnP" secondAttribute="bottom" id="zwE-yF-1H2"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="GitHubのリポジトリ" id="5u2-UZ-dkO">
                        <barButtonItem key="rightBarButtonItem" id="LJ2-VX-CRB">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="1yZ-0H-SLL">
                                <rect key="frame" x="302" y="7" width="92" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="履歴をクリア">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="didTapClearButton:" destination="Vad-H1-wfk" eventType="touchUpInside" id="qIS-xM-0Xl"/>
                                </connections>
                            </button>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="clearButton"/>
                            </userDefinedRuntimeAttributes>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics"/>
                    <connections>
                        <outlet property="searchBar" destination="7ZZ-AM-ep2" id="Mf4-fW-e3i"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" placeholder="GitHubのリポジトリを検索できるよー" translatesAutoresizingMaskIntoConstraints="NO" id="nkx-CE-8cU">
                                <rect key="frame" x="0.0" y="88" width="414" height="56"/>
                                <textInputTraits key="textInputTraits"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="listSearchbar"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <outlet property="delegate" destination="2Eg-Kj-nAT" id="VQp-xj-ox7"/>
                                </connections>
                            </searchBar>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mRF-dI-S4m">
                                <rect key="frame" x="5" y="93" width="369" height="41"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="listSearchbutton"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <action selector="didTapSearchButton:" destination="2Eg-Kj-nAT" eventType="touchUpInside" id="K8o-1H-eNr"/>
                                </connections>
                            </button>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Zy-ww-B1e">
...
                                        <connections>
                                            <outlet property="indicator" destination="4pN-lq-8s7" id="IpL-eo-phn"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="listTableView"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <outlet property="dataSource" destination="2Eg-Kj-nAT" id="Eec-1a-Q8c"/>
                                    <outlet property="delegate" destination="2Eg-Kj-nAT" id="U1w-Zp-uJA"/>
                                </connections>
                            </tableView>
...
